--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <body>
 <h1>This is my first published web<h1>
-<p>Hello My Name is Jordan from Indonesia</p>
+<p>Hello My Name is Jordan from XI Ipa 2 Class</p>
 <br>I just joined github to publish my first static web</br>
 </body>
 </head>
